<resources>
    <string name="app_name">eDive</string>
    <string name="verify_second">秒后重新发送</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="loading">加载中...</string>
    <string name="login_phone_emil">请输入手机号/邮箱</string>
    <string name="login_pass">密码登录</string>
    <string name="login">登录</string>
    <string name="login_ed_pass">输入密码（6-12位）</string>
    <string name="login_register_name">注册账号</string>
    <string name="login_forget_pass">忘记密码</string>
    <string name="et_phone">请输入手机号</string>
    <string name="register_getcode">获取验证码</string>
    <string name="et_Verification">输入验证码</string>
    <string name="unameLogin">账号密码登陆</string>
    <string name="Verification">验证码登录</string>
    <string name="wechatLogin">微信登录</string>
    <string name="QuickLogin">快捷登录</string>
    <string name="FindPassword">忘记密码</string>
    <string name="Register">注册账号</string>
    <string name="et_password">请输入密码</string>
    <string name="ok">确认</string>
    <string name="findpass_ok_new_pass">确认新密码</string>
    <string name="findpass_ed_new_pass">请输入新密码</string>
    <string name="register_code">请输入验证码</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photo">照片</string>
    <string name="Setting">设置</string>
    <string name="search_import_content">请输入你要搜索的内容</string>
    <string name="sourch_cancel_history">清空</string>
    <string name="sourch_history">搜索历史</string>
    <string name="updatepay_ed_phone">请输入手机号</string>
    <string name="updatepay_et_ok_new_pass">确认新密码</string>
    <string name="update_ok_btn">确认修改</string>
    <string name="update_et_former_password">请输入旧密码</string>
    <string name="update_et_new_password">请输入新密码</string>
    <string name="update_ok_new_pass">确认新密码</string>
    <string name="rb_dp">店铺</string>
    <string name="rb_sp">商场</string>
    <string name="rb_sc">日程</string>
    <string name="rb_club">社圈</string>
    <string name="rb_my">我的</string>
    <string name="et_phone_user">手机号</string>
    <string name="et_password_user">密码</string>
    <string name="tv_yzmlogin">验证码登录</string>
    <string name="tv_misspassword">忘记密码?</string>
    <string name="tv_log">快捷登录</string>
    <string name="et_ver_user">验证码</string>
    <string name="tv_yzmlogins">密码登录</string>
    <string name="et_code">请输入验证码</string>
    <string name="et_passwords">请确认密码</string>
</resources>
