<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/Setting_bg"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:layout_marginTop="@dimen/dp_35"
            android:layout_marginLeft="@dimen/dp_24"
            android:id="@+id/tv_loginString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_30"
            android:text="@string/login"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_44"
            android:layout_marginLeft="@dimen/dp_24"
            android:text="@string/et_phone_user"
            android:textColor="@color/color_phone"
            android:textSize="@dimen/sp_14"
            android:alpha="0.7"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_24"
            android:background="@drawable/shape_phone"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_uname"
                android:padding="@dimen/dp_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_phone"
                android:background="@null"
                android:textSize="@dimen/sp_18"
                android:maxLength="11"
                android:textColorHint="@color/hint"
                />

        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_25"
            android:layout_marginLeft="@dimen/dp_24"
            android:text="@string/et_password_user"
            android:textColor="@color/color_phone"
            android:textSize="@dimen/sp_14"
            android:alpha="0.7"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_24"
            android:background="@drawable/shape_phone"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_password"
                android:padding="@dimen/dp_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_password"
                android:background="@null"
                android:textSize="@dimen/sp_18"
                android:maxLength="11"
                android:textColorHint="@color/hint"
                />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/iv_unameandpasswordLogin"
            android:layout_marginRight="@dimen/dp_24"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_45"
            android:layout_width="match_parent"
            android:background="@drawable/shape_login"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="登录"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/dp_14"
                android:layout_marginBottom="@dimen/dp_14"
                android:textSize="@dimen/sp_16"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_VerificationCodeLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_yzmlogin"
                android:textColor="@color/tv_verlogin"
                />
            <TextView
                android:id="@+id/tv_ForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/tv_verlogin"
                android:text="@string/tv_misspassword"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginRight="@dimen/dp_50"
            android:layout_marginLeft="@dimen/dp_50"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp_50"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/dp_85"
                android:layout_height="@dimen/dp_0_5"
                android:layout_centerVertical="true"
                android:background="@drawable/shape_hintss"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/tv_verlogin"
                android:text="@string/tv_log"
                android:layout_centerInParent="true"

                />
            <ImageView
                android:layout_width="@dimen/dp_85"
                android:layout_height="@dimen/dp_0_5"
                android:layout_centerVertical="true"
                android:background="@drawable/shape_hintss"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="@dimen/dp_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_wechatLogin"
                android:layout_width="@dimen/dp_39"
                android:layout_height="@dimen/dp_39"
                android:src="@mipmap/icon_weixin"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_30"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="还没有账号?"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/tv_Registered"
            android:layout_toRightOf="@id/tv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="立即注册账号"
            android:textColor="@color/blue"
            />
    </RelativeLayout>
</RelativeLayout>