<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/Setting_bg"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.HomeActivity">
        <FrameLayout
            android:id="@+id/fl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/rg"
            />

        <RadioGroup
            android:id="@+id/rg"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:background="@color/radig_bg"
            android:gravity="center"
            android:layout_height="wrap_content">
             <RadioButton
                android:id="@+id/rb_home"
                android:layout_marginTop="@dimen/dp_5"
                 android:layout_marginBottom="@dimen/dp_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@drawable/select_main_home"
                android:text="@string/rb_dp"
                 android:gravity="center"
                 android:textSize="@dimen/sp_10"
                 android:drawablePadding="@dimen/dp_4"
                 android:textColor="@drawable/select_text_shop"
                />
            <RadioButton
                android:id="@+id/rb_shopping"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/select_main_shop"
                android:gravity="center"
                android:drawablePadding="@dimen/dp_4"
                android:text="@string/rb_sp"
                android:textSize="@dimen/sp_10"
                android:textColor="@drawable/select_text_shopping"
                />

            <RadioButton
                android:id="@+id/rb_schedule"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/select_main_shopping"
                android:gravity="center"
                android:text="@string/rb_sc"
                android:textSize="@dimen/sp_10"
                android:drawablePadding="@dimen/dp_4"
                android:textColor="@drawable/select_text_shopping"
                />
            <RadioButton
                android:id="@+id/rb_club"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/select_main_club"
                android:gravity="center"
                android:text="@string/rb_club"
                android:textSize="@dimen/sp_10"
                android:drawablePadding="@dimen/dp_4"
                android:textColor="@drawable/select_text_shopping"
                android:layout_marginBottom="@dimen/dp_4"
                />

            <RadioButton
                android:id="@+id/rb_personal"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/select_main_personal"
                android:gravity="center"
                android:text="@string/rb_my"
                android:textSize="@dimen/sp_10"
                android:drawablePadding="@dimen/dp_4"
                android:textColor="@drawable/select_text_shopping"
                />
        </RadioGroup>

</RelativeLayout>