<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/Setting_bg"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activity.FindPasswordActivity">
    <com.example.edives.design.CommonTitle
        android:id="@+id/findpass_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        app:canBack="true"
        app:backImage="@mipmap/icon_back"
        app:titleText="找回密码"
        >
    </com.example.edives.design.CommonTitle>

        <LinearLayout
            android:layout_marginTop="@dimen/dp_30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:id="@+id/findpass_ll_ed_phone_emil"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_marginRight="@dimen/dp_25"
                android:layout_marginLeft="@dimen/dp_25"
                >
                <ImageView
                    android:layout_width="@dimen/dp_18"
                    android:layout_height="@dimen/dp_18"
                    android:src="@mipmap/icon_sjh"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_gravity="center"
                    />
                <EditText
                    android:id="@+id/findpass_ed_phone_emil"
                    android:layout_width="@dimen/dp_190"
                    android:layout_height="45dp"
                    android:hint="@string/login_phone_emil"
                    android:maxLines="1"
                    android:textSize="@dimen/sp_14"
                    android:background="@null"
                    android:textColor="@color/wechatLogin"
                    android:textColorHint="@color/wechatLogin"
                    android:textStyle="normal"
                    android:gravity="center_vertical"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:layout_marginLeft="@dimen/dp_25"
                android:layout_marginRight="@dimen/dp_25"
                android:background="@color/white"
                android:alpha="0.1"
                />

            <RelativeLayout
                android:layout_marginTop="@dimen/dp_10"
                android:id="@+id/findpass_ll_ed_code"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_marginLeft="@dimen/dp_25"
                android:layout_marginRight="@dimen/dp_25"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/findpass_getcode_iv"
                    android:layout_width="@dimen/dp_15"
                    android:layout_height="@dimen/dp_17"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_12"
                    android:src="@mipmap/icon_yanzhengmama" />

                <EditText
                    android:id="@+id/findpass_ed_code"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="3dp"
                    android:layout_toRightOf="@id/findpass_getcode_iv"
                    android:background="@null"
                    android:hint="@string/register_code"
                    android:inputType="phone|number"
                    android:lines="1"
                    android:maxLines="1"
                    android:textColor="@color/wechatLogin"
                    android:textColorHint="@color/wechatLogin"
                    android:textSize="@dimen/sp_14"
                    android:textStyle="normal" />
                <TextView
                    android:id="@+id/findpass_btn_getcode"
                    android:layout_width="@dimen/dp_104"
                    android:layout_height="@dimen/dp_34"
                    android:background="@drawable/register_getcode_shape_btn"
                    android:text="@string/register_getcode"
                    android:textColor="@color/ffffff"
                    android:layout_centerVertical="true"
                    tools:ignore="RtlHardcoded"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:layout_marginRight="@dimen/dp_15"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_5"
                    />
            </RelativeLayout>
            <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_4"
            android:background="@color/white"
                android:alpha="0.1"
            />
        </LinearLayout>

    <!--输入新密码-->



        <LinearLayout
            android:layout_marginRight="@dimen/dp_25"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_marginTop="@dimen/dp_10"
                android:id="@+id/findpass_ll_ed_new_pass"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                >
                <ImageView
                    android:layout_width="@dimen/dp_16"
                    android:layout_height="@dimen/dp_16"
                    android:src="@mipmap/icon_mima"
                    />
                <EditText
                    android:layout_marginLeft="@dimen/dp_12"
                    android:id="@+id/findpass_ed_new_pass"
                    android:layout_width="@dimen/dp_190"
                    android:layout_height="45dp"
                    android:lines="1"
                    android:hint="@string/findpass_ed_new_pass"
                    android:textCursorDrawable="@drawable/textcursor"
                    android:inputType="textPassword"
                    android:layout_gravity="center_horizontal"

                    android:maxLines="1"
                    android:textSize="@dimen/sp_14"
                    android:background="@null"
                    android:textColor="@color/wechatLogin"
                    android:textColorHint="@color/wechatLogin"
                    android:gravity="center_vertical"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:background="@color/white"
                android:alpha="0.14"
                />

            <!--确认新密码-->
            <LinearLayout
                android:layout_marginTop="@dimen/dp_10"
                android:id="@+id/findpass_ll_queren_new_pass"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                >
                <ImageView
                    android:layout_width="@dimen/dp_16"
                    android:layout_height="@dimen/dp_16"
                    android:src="@mipmap/icon_mimas"
                    />
                <EditText
                    android:layout_marginLeft="@dimen/dp_12"
                    android:id="@+id/findpass_queren_ed_new_pass"
                    android:layout_width="@dimen/dp_190"
                    android:layout_height="45dp"
                    android:lines="1"
                    android:hint="@string/findpass_ok_new_pass"
                    android:inputType="textPassword"
                    android:textStyle="normal"

                    android:textSize="@dimen/sp_14"
                    android:background="@null"
                    android:textColor="@color/wechatLogin"
                    android:textColorHint="@color/wechatLogin"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    />
            </LinearLayout>
            <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="@dimen/dp_0_5"-->
            <!--android:layout_marginLeft="@dimen/dp_20"-->
            <!--android:layout_marginRight="@dimen/dp_20"-->
            <!--android:layout_marginTop="@dimen/dp_4"-->
            <!--android:background="@color/btn_666666" />-->
        </LinearLayout>
    <View
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginRight="@dimen/dp_25"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"
        android:background="@color/white"
        android:alpha="0.14"
        />
    <Button
       android:layout_marginRight="@dimen/dp_25"
        android:layout_marginLeft="@dimen/dp_25"
        android:id="@+id/findpass_ok_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_login"
        android:layout_marginTop="@dimen/dp_60"
        android:text="@string/ok"
        android:layout_gravity="center"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/ffffff"
        />
</LinearLayout>