<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/Setting_bg"
    tools:context=".activity.RegisterActivity">
    <com.example.edives.design.CommonTitle
        android:id="@+id/tv_loginString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:canBack="true"
        app:titleText="注册"
        app:backImage="@mipmap/icon_back"
        />
    <RelativeLayout
        android:id="@+id/rl_phone"
        android:layout_below="@id/tv_loginString"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_24"
        android:background="@drawable/shape_phone"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_phone"
            android:padding="@dimen/dp_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_phone"
            android:background="@null"
            android:textSize="@dimen/sp_18"
            android:maxLength="11"
            android:textColorHint="@color/hint"
            android:textColor="@color/white"
            android:alpha="0.8"
            />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_code"
        android:layout_below="@id/rl_phone"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_25"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/dp_24"

        android:layout_height="wrap_content">
        <LinearLayout
            android:background="@drawable/shape_phone"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_code"
                android:padding="@dimen/dp_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_code"
                android:background="@null"
                android:textSize="@dimen/sp_18"
                android:maxLength="7"
                android:textColorHint="@color/hint"
                android:textColor="@color/white"
                android:alpha="0.8"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bt_getcode"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_getVerificationCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/register_getcode_shape_btn"
                android:text="获取验证码"
                android:textColor="@color/blue"
                android:textSize="@dimen/sp_14"
                android:padding="@dimen/dp_14"
                />

        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/rl_password"
        android:layout_below="@id/ll_code"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_25"
        android:layout_marginRight="@dimen/dp_24"
        android:background="@drawable/shape_phone"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_password"
            android:padding="@dimen/dp_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_password"
            android:background="@null"
            android:textSize="@dimen/sp_18"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColorHint="@color/hint"
            android:textColor="@color/white"
            android:alpha="0.8"
            />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_passwords"
        android:layout_below="@id/rl_password"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_25"
        android:layout_marginRight="@dimen/dp_24"
        android:background="@drawable/shape_phone"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_passwords"
            android:padding="@dimen/dp_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_passwords"
            android:background="@null"
            android:textSize="@dimen/sp_18"
            android:maxLines="1"
            android:textColorHint="@color/hint"
            android:textColor="@color/white"
            android:alpha="0.8"
            />

    </RelativeLayout>
    <Button
        android:layout_below="@id/rl_passwords"
        android:id="@+id/bt_ok"
        android:layout_marginTop="@dimen/dp_45"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginRight="@dimen/dp_25"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:background="@drawable/shape_login"
        android:textColor="@color/white"
        android:text="注册"
        android:gravity="center"
        android:textSize="@dimen/sp_14"
        />

    <RelativeLayout
        android:layout_marginTop="@dimen/dp_30"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_50"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="点击注册默认同意"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/tv_Registered"
            android:layout_toRightOf="@id/tv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="《用户注册协议》"
            android:textColor="@color/blue"
            />
    </RelativeLayout>
</RelativeLayout>